# radar-fundamentos

./: Cargo.toml  README.md  acoes.yaml  ativos.yaml  fundos.yaml
src/: lib.rs  main.rs
src/modelo/: acao.rs  ativo.rs  csv_exports.rs  fundo.rs  linha_csv.rs  mod.rs
src/scraper/: atributo.rs  busca.rs  compare.rs  mod.rs  ultima_cotacao_yahoo.rs  zscore.rs  zscore_update.rs
src/util/: es.rs  html.rs  macros.rs  mod.rs
