[package]
name = "radar-fundamentos"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Seu Nome <seu@email.com>"]


[dependencies]
csv = "1"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.39", features = ["derive"] }
#yahoo_finance_api = {version = "4.0", features = ["blocking"]}
yahoo_finance_api = "4.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
time = "0.3.41"
tokio-test = "0.4.4"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9.34"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"

[badges]
maintenance = { status = "actively-developed" }

[dependencies.openssl]
version = "0.10"

[target.'cfg(target_arch = "arm")'.dependencies.openssl]
version = "0.10"
features = ["vendored"]
