[package]
name = "radar-fundamentos"
version = "0.5.0"
edition = "2024"
license = "MIT"
authors = ["Márcio <marciosr10 at gmail.com>"]


[dependencies]
csv = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
#yahoo_finance_api = {version = "4.0", features = ["blocking"]}
yahoo_finance_api = "4.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
time = "0.3"
tokio-test = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde_yml = "0.0.12"
scraper = "0.25"
anyhow = "1.0"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"

[badges]
maintenance = { status = "actively-developed" }

[dependencies.openssl]
version = "0.10"

[target.'cfg(target_arch = "arm")'.dependencies.openssl]
version = "0.10"
features = ["vendored"]
